; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/sound/ppc/extr_snd_ps3.c_snd_ps3_wait_for_dma_stop.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/sound/ppc/extr_snd_ps3.c_snd_ps3_wait_for_dma_stop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_ps3_card_info = type { i32 }

@PS3_AUDIO_INTR_0 = common dso_local global i32 0, align 4
@PS3_AUDIO_AX_IS = common dso_local global i32 0, align 4
@PS3_AUDIO_CONFIG = common dso_local global i32 0, align 4
@PS3_AUDIO_CONFIG_CLEAR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.snd_ps3_card_info*)* @snd_ps3_wait_for_dma_stop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @snd_ps3_wait_for_dma_stop(%struct.snd_ps3_card_info* %0) #0 {
  %2 = alloca %struct.snd_ps3_card_info*, align 8
  %3 = alloca i32, align 4
  store %struct.snd_ps3_card_info* %0, %struct.snd_ps3_card_info** %2, align 8
  %4 = load %struct.snd_ps3_card_info*, %struct.snd_ps3_card_info** %2, align 8
  %5 = call i32 @snd_ps3_verify_dma_stop(%struct.snd_ps3_card_info* %4, i32 700, i32 1)
  store i32 %5, i32* %3, align 4
  %6 = load i32, i32* @PS3_AUDIO_INTR_0, align 4
  %7 = call i32 @update_reg(i32 %6, i32 0)
  %8 = load i32, i32* @PS3_AUDIO_AX_IS, align 4
  %9 = call i32 @update_reg(i32 %8, i32 0)
  %10 = load i32, i32* %3, align 4
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %17

12:                                               ; preds = %1
  %13 = load i32, i32* @PS3_AUDIO_CONFIG, align 4
  %14 = load i32, i32* @PS3_AUDIO_CONFIG_CLEAR, align 4
  %15 = xor i32 %14, -1
  %16 = call i32 @update_mask_reg(i32 %13, i32 %15, i32 0)
  br label %17

17:                                               ; preds = %12, %1
  %18 = call i32 (...) @wmb()
  ret void
}

declare dso_local i32 @snd_ps3_verify_dma_stop(%struct.snd_ps3_card_info*, i32, i32) #1

declare dso_local i32 @update_reg(i32, i32) #1

declare dso_local i32 @update_mask_reg(i32, i32, i32) #1

declare dso_local i32 @wmb(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
